API, URL, Documentation

--- a/homework/homework4/stage04_data-acquisition-and-ingestion_homework-starter.ipynb
+++ b/homework/homework4/stage04_data-acquisition-and-ingestion_homework-starter.ipynb
@@ -17,10 +17,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "537640af",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'dotenv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mbs4\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m BeautifulSoup\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdotenv\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_dotenv\n\u001b[32m      7\u001b[39m RAW = pathlib.Path(\u001b[33m'\u001b[39m\u001b[33mdata/raw\u001b[39m\u001b[33m'\u001b[39m); RAW.mkdir(parents=\u001b[38;5;28;01mTrue\u001b[39;00m, exist_ok=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m      8\u001b[39m load_dotenv(); \u001b[38;5;28mprint\u001b[39m(\u001b[33m'\u001b[39m\u001b[33mALPHAVANTAGE_API_KEY loaded?\u001b[39m\u001b[33m'\u001b[39m, \u001b[38;5;28mbool\u001b[39m(os.getenv(\u001b[33m'\u001b[39m\u001b[33mALPHAVANTAGE_API_KEY\u001b[39m\u001b[33m'\u001b[39m)))\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'dotenv'"
+     ]
+    }
+   ],
    "source": [
     "import os, pathlib, datetime as dt\n",
     "import requests\n",
@@ -73,28 +85,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c0f064f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m SYMBOL = \u001b[33m'\u001b[39m\u001b[33mAAPL\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m USE_ALPHA = \u001b[38;5;28mbool\u001b[39m(\u001b[43mos\u001b[49m.getenv(\u001b[33m'\u001b[39m\u001b[33mALPHAVANTAGE_API_KEY\u001b[39m\u001b[33m'\u001b[39m))\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m USE_ALPHA:\n\u001b[32m      5\u001b[39m     url = \u001b[33m'\u001b[39m\u001b[33mhttps://www.alphavantage.co/query\u001b[39m\u001b[33m'\u001b[39m\n",
+      "\u001b[31mNameError\u001b[39m: name 'os' is not defined"
+     ]
+    }
+   ],
    "source": [
     "SYMBOL = 'AAPL'\n",
     "USE_ALPHA = bool(os.getenv('ALPHAVANTAGE_API_KEY'))\n",
+    "\n",
     "if USE_ALPHA:\n",
     "    url = 'https://www.alphavantage.co/query'\n",
-    "    params = {'function':'TIME_SERIES_DAILY_ADJUSTED','symbol':SYMBOL,'outputsize':'compact','apikey':os.getenv('ALPHAVANTAGE_API_KEY')}\n",
+    "    params = {\n",
+    "        'function':'TIME_SERIES_DAILY_ADJUSTED',\n",
+    "        'symbol': SYMBOL,\n",
+    "        'outputsize':'compact',\n",
+    "        'apikey': os.getenv('ALPHAVANTAGE_API_KEY')\n",
+    "    }\n",
     "    r = requests.get(url, params=params, timeout=30)\n",
     "    r.raise_for_status()\n",
     "    js = r.json()\n",
     "    key = [k for k in js if 'Time Series' in k][0]\n",
-    "    df_api = pd.DataFrame(js[key]).T.reset_index().rename(columns={'index':'date','5. adjusted close':'adj_close'})[['date','adj_close']]\n",
-    "    df_api['date'] = pd.to_datetime(df_api['date']); df_api['adj_close'] = pd.to_numeric(df_api['adj_close'])\n",
+    "    df_api = pd.DataFrame(js[key]).T.reset_index().rename(\n",
+    "        columns={'index':'date', '5. adjusted close':'adj_close'}\n",
+    "    )[['date', 'adj_close']]\n",
+    "    df_api['date'] = pd.to_datetime(df_api['date'])\n",
+    "    df_api['adj_close'] = pd.to_numeric(df_api['adj_close'])\n",
     "else:\n",
     "    import yfinance as yf\n",
-    "    df_api = yf.download(SYMBOL, period='3mo', interval='1d').reset_index()[['Date','Adj Close']]\n",
-    "    df_api.columns = ['date','adj_close']\n",
+    "    df_api = yf.download(SYMBOL, period='3mo', interval='1d').reset_index()[['Date', 'Adj Close']]\n",
+    "    df_api.columns = ['date', 'adj_close']\n",
     "\n",
-    "v_api = validate(df_api, ['date','adj_close']); v_api"
+    "v_api = validate(df_api, ['date', 'adj_close'])\n",
+    "print(v_api)"
    ]
   },
   {
@@ -123,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SCRAPE_URL = 'https://example.com/markets-table'  # TODO: replace with permitted page\n",
+    "SCRAPE_URL = 'https://www.wsj.com/market-data'  # TODO: replace with permitted page\n",
     "headers = {'User-Agent':'AFE-Homework/1.0'}\n",
     "try:\n",
     "    resp = requests.get(SCRAPE_URL, headers=headers, timeout=30); resp.raise_for_status()\n",
@@ -164,6 +198,63 @@
     "- Scrape Source: (URL/table description)\n",
     "- Assumptions & risks: (rate limits, selector fragility, schema changes)\n",
     "- Confirm `.env` is not committed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d5b71f6-5015-45fb-a658-b9f8127c8ffb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Data Sources & URLs\n",
+    "Alpha Vantage API (if API key provided)\n",
+    "URL: https://www.alphavantage.co/query\n",
+    "Params: function=TIME_SERIES_DAILY_ADJUSTED, symbol=AAPL, outputsize=compact, apikey from .env\n",
+    "\n",
+    "Yahoo Finance (yfinance fallback)\n",
+    "Uses yfinance Python package to download historical data for symbol AAPL for 3 months.\n",
+    "\n",
+    "Web Scraping Market Data Table\n",
+    "Example URL: https://www.wsj.com/market-data\n",
+    "HTML table parsed with BeautifulSoup (selectors for <tr>, <th>, <td>)\n",
+    "\n",
+    "Validation Logic\n",
+    "Required columns for API & yfinance data: date, adj_close\n",
+    "\n",
+    "For scraped data: Check presence of columns (e.g., 'Ticker', 'Price'), convert 'Price' to numeric if applicable\n",
+    "\n",
+    "Validation output includes:\n",
+    "\n",
+    "Missing required columns list\n",
+    "\n",
+    "DataFrame shape (rows, columns)\n",
+    "\n",
+    "Total number of NA (missing) values\n",
+    "\n",
+    "Environment & Security\n",
+    ".env file contains sensitive keys, e.g. ALPHAVANTAGE_API_KEY\n",
+    "\n",
+    "Ensure .env is listed in .gitignore to avoid committing secrets to version control\n",
+    "\n",
+    "Assumptions & Risks\n",
+    "Assumptions:\n",
+    "\n",
+    "Alpha Vantage API key valid and rate limits not exceeded\n",
+    "\n",
+    "yfinance fallback availability and accuracy for historical prices\n",
+    "\n",
+    "Scraped websites’ structure remains stable and HTML format unchanged\n",
+    "\n",
+    "Risks:\n",
+    "\n",
+    "API limits or downtime could interrupt data retrieval\n",
+    "\n",
+    "Website layout changes can break scraping logic requiring updates\n",
+    "\n",
+    "Possible missing or corrupted data requiring manual review\n",
+    "\n",
+    "Sensitive API keys must be kept secure and not exposed publicly"
    ]
   }
  ],
